# prefect-k3s

./: .gitignore  pyproject.toml
src/prefect_k3s/: cli.py  config.py  vars.py
